; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_syscalls.c_fg_vn_data_free.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_syscalls.c_fg_vn_data_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fd_vn_data = type { i32, %struct.fd_vn_data* }

@M_FD_DIRBUF = common dso_local global i32 0, align 4
@fd_vn_lck_grp = common dso_local global i32 0, align 4
@M_FD_VN_DATA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fg_vn_data_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.fd_vn_data*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.fd_vn_data*
  store %struct.fd_vn_data* %5, %struct.fd_vn_data** %3, align 8
  %6 = load %struct.fd_vn_data*, %struct.fd_vn_data** %3, align 8
  %7 = getelementptr inbounds %struct.fd_vn_data, %struct.fd_vn_data* %6, i32 0, i32 1
  %8 = load %struct.fd_vn_data*, %struct.fd_vn_data** %7, align 8
  %9 = icmp ne %struct.fd_vn_data* %8, null
  br i1 %9, label %10, label %16

10:                                               ; preds = %1
  %11 = load %struct.fd_vn_data*, %struct.fd_vn_data** %3, align 8
  %12 = getelementptr inbounds %struct.fd_vn_data, %struct.fd_vn_data* %11, i32 0, i32 1
  %13 = load %struct.fd_vn_data*, %struct.fd_vn_data** %12, align 8
  %14 = load i32, i32* @M_FD_DIRBUF, align 4
  %15 = call i32 @FREE(%struct.fd_vn_data* %13, i32 %14)
  br label %16

16:                                               ; preds = %10, %1
  %17 = load %struct.fd_vn_data*, %struct.fd_vn_data** %3, align 8
  %18 = getelementptr inbounds %struct.fd_vn_data, %struct.fd_vn_data* %17, i32 0, i32 0
  %19 = load i32, i32* @fd_vn_lck_grp, align 4
  %20 = call i32 @lck_mtx_destroy(i32* %18, i32 %19)
  %21 = load %struct.fd_vn_data*, %struct.fd_vn_data** %3, align 8
  %22 = load i32, i32* @M_FD_VN_DATA, align 4
  %23 = call i32 @FREE(%struct.fd_vn_data* %21, i32 %22)
  ret void
}

declare dso_local i32 @FREE(%struct.fd_vn_data*, i32) #1

declare dso_local i32 @lck_mtx_destroy(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
